--- a/zad/zad.csproj
+++ b/zad/zad.csproj
@@ -46,6 +46,7 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="BubbleSortFuncs.cs" />
     <Compile Include="InsertionSortFuncs.cs" />
     <Compile Include="Form1.cs">
       <SubType>Form</SubType>
